Revert r26584: "Upgrade to Perst 4.05"
This is causing more problem then it supposed to fix.

git-svn-id: file:///home/toad/git-migration/temprepository/trunk/plugins/XMLSpider@26646 67a373e5-eb02-0410-a15c-ee090a768436