@@ -1,22 +1,10 @@
 package plugins.XMLSpider.org.garret.perst.impl;
-import java.lang.reflect.Array;
-import java.util.ArrayList;
-import java.util.ConcurrentModificationException;
-import java.util.Date;
-import java.util.Iterator;
-import java.util.Map;
-import java.util.NoSuchElementException;
+import plugins.XMLSpider.org.garret.perst.*;
 
-import plugins.XMLSpider.org.garret.perst.Assert;
-import plugins.XMLSpider.org.garret.perst.IValue;
-import plugins.XMLSpider.org.garret.perst.Index;
-import plugins.XMLSpider.org.garret.perst.IterableIterator;
-import plugins.XMLSpider.org.garret.perst.Key;
-import plugins.XMLSpider.org.garret.perst.PersistentCollection;
-import plugins.XMLSpider.org.garret.perst.PersistentIterator;
-import plugins.XMLSpider.org.garret.perst.StorageError;
+import  java.util.*;
+import  java.lang.reflect.Array;
 
-class Btree<T> extends PersistentCollection<T> implements Index<T> { 
+class Btree<T extends IPersistent> extends PersistentCollection<T> implements Index<T> { 
     int       root;
     int       height;
     int       type;
@@ -113,7 +101,7 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
         case ClassDescriptor.tpDate:
             return Date.class;
         case ClassDescriptor.tpObject:
-            return Object.class;
+            return IPersistent.class;
         case ClassDescriptor.tpArrayOfByte:
             return byte[].class;
         default:
@@ -127,8 +115,9 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
                 throw new StorageError(StorageError.INCOMPATIBLE_KEY_TYPE);
             }
             if (type == ClassDescriptor.tpObject && key.ival == 0 && key.oval != null) { 
-                Object obj = key.oval;
-                key = new Key(obj, getStorage().makePersistent(obj), key.inclusion != 0);
+                IPersistent obj = (IPersistent)key.oval;
+                getStorage().makePersistent(obj);
+                key = new Key(obj, key.inclusion != 0);
             }
             if (key.oval instanceof String) { 
                 key = new Key(((String)key.oval).toCharArray(), key.inclusion != 0);
@@ -164,9 +153,9 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
         return list;
     }
 
-    public Object[] prefixSearch(String key) {
+    public IPersistent[] prefixSearch(String key) {
         ArrayList<T> list = prefixSearchList(key);
-        return list.toArray();
+        return (IPersistent[])list.toArray(new IPersistent[list.size()]);
     }
 
     public ArrayList<T> getList(Key from, Key till) {
@@ -185,12 +174,12 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
         return get(getKeyFromObject(key));
     }
 
-    public Object[] get(Key from, Key till) {
+    public IPersistent[] get(Key from, Key till) {
         ArrayList<T> list = getList(from, till);
-        return list.toArray();
+        return (IPersistent[])list.toArray(new IPersistent[list.size()]);
     }
 
-    public Object[] get(Object from, Object till) {
+    public IPersistent[] get(Object from, Object till) {
         return get(getKeyFromObject(from), getKeyFromObject(till));
     }
 
@@ -209,7 +198,10 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
             throw new StorageError(StorageError.DELETED_OBJECT);
         }
         key = checkKey(key);
-        BtreeKey ins = new BtreeKey(key, db.makePersistent(obj));
+        if (!obj.isPersistent()) { 
+            db.makePersistent(obj);
+        }
+        BtreeKey ins = new BtreeKey(key, obj.getOid());
         if (root == 0) { 
             root = BtreePage.allocate(db, 0, type, ins);
             height = 1;
@@ -231,14 +223,10 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
     }
 
     public void remove(Key key, T obj) {
-        remove(new BtreeKey(checkKey(key), getStorage().getOid(obj)));
+        remove(new BtreeKey(checkKey(key), obj.getOid()));
     }
 
-    boolean removeIfExists(Key key, Object obj) {
-        return removeIfExists(new BtreeKey(checkKey(key), getStorage().getOid(obj)));
-    }
-
-        
+    
     void remove(BtreeKey rem) 
     {
         if (!removeIfExists(rem)) { 
@@ -322,11 +310,12 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
             return new Key((Object[])o);
         } else if (o instanceof Enum) {
             return new Key((Enum)o);
-        } else if (o instanceof IValue) {
-            return new Key((IValue)o);
-        } else {
-            return new Key(o);
+        } else if (o instanceof IPersistent) {
+            return new Key((IPersistent)o);
+        } else if (o instanceof Comparable) {
+            return new Key((Comparable)o);
         }
+        throw new StorageError(StorageError.UNSUPPORTED_TYPE);
     }
         
 
@@ -335,7 +324,7 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
                        new Key((prefix + Character.MAX_VALUE).toCharArray(), false));
     }
 
-    public Object[] getPrefix(String prefix) { 
+    public IPersistent[] getPrefix(String prefix) { 
         return get(new Key(prefix.toCharArray(), true), 
                    new Key((prefix + Character.MAX_VALUE).toCharArray(), false));
     }
@@ -375,20 +364,24 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
         }
     }
         
-    public Object[] toArray() {
-        Object[] arr = new Object[nElems];
+    public IPersistent[] toPersistentArray() {
+        IPersistent[] arr = new IPersistent[nElems];
         if (root != 0) { 
             BtreePage.traverseForward((StorageImpl)getStorage(), root, type, height, arr, 0);
         }
         return arr;
     }
   
+    public Object[] toArray() {
+        return toPersistentArray();
+    }
+
     public <E> E[] toArray(E[] arr) {
         if (arr.length < nElems) { 
             arr = (E[])Array.newInstance(arr.getClass().getComponentType(), nElems);
         }
         if (root != 0) { 
-            BtreePage.traverseForward((StorageImpl)getStorage(), root, type, height, arr, 0);
+            BtreePage.traverseForward((StorageImpl)getStorage(), root, type, height, (IPersistent[])arr, 0);
         }
         if (arr.length > nElems) { 
             arr[nElems] = null;
@@ -476,7 +469,7 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
           case ClassDescriptor.tpByte:
             return new Byte(data[offs]);
           case ClassDescriptor.tpShort:
-            return new Short(Bytes.unpack2(data, offs));
+            return Short.valueOf(Bytes.unpack2(data, offs));
           case ClassDescriptor.tpChar:
             return new Character((char)Bytes.unpack2(data, offs));
           case ClassDescriptor.tpInt:
@@ -971,7 +964,7 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
 
         public int nextOid() {
            if (!hasNext()) { 
-               return 0;                   
+                throw new NoSuchElementException();
             }
             StorageImpl db = (StorageImpl)getStorage();
             int pos = posStack[sp-1];   
@@ -1312,13 +1305,6 @@ class Btree<T> extends PersistentCollection<T> implements Index<T> {
     public IterableIterator<Map.Entry<Object,T>> entryIterator(Object from, Object till, int order) { 
         return new BtreeSelectionEntryIterator(checkKey(getKeyFromObject(from)), 
                                                checkKey(getKeyFromObject(till)), order);
-    }
-
-    public int indexOf(Key key) { 
-        PersistentIterator iterator = (PersistentIterator)iterator(null, key, DESCENT_ORDER);
-        int i;
-        for (i = -1; iterator.nextOid() != 0; i++);
-        return i;
     }
 
     public T getAt(int i) {
